--- a/sokcho.css
+++ b/sokcho.css
@@ -95,7 +95,7 @@ body {
   font-size:50px;
   position: absolute;
   bottom: -110%;
-  right: 6.5%;
+  right: 5.5%;
   color: rgb(255, 237, 136);
   padding-left: 20px;
   padding-right: 20px;
@@ -123,4 +123,36 @@ body {
   display: block;
   margin: auto;
   margin-top: 100px;
+}
+
+.food_img {
+  width: 600px;
+  height:400px;
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+  border-radius: 10px;
+}
+
+.food_img2 {
+  width: 500px;
+  height:400px;
+  border-radius: 10px;
+}
+
+.intro {
+  margin-top: 100px;
+  text-align:center;
+  color:rgb(0, 0, 0);
+  font-size: 28px;
+  font-family: chilanka;
+}
+
+.column {
+  flex:33.33%;
+  padding:5px;
+}
+
+.row{
+  display: flex;
 }
